add github actions settings

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -17,6 +17,7 @@ const { imageUrl, imageDiscription } = Astro.props;
     }
     .link-card img {
         width: 200px;
+		height: 200px;
         margin: 16px;
     }
 </style>
