fixed image path

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,4 +1,8 @@
 ---
+// interface Props {
+//     imageUrl: string;
+//     imageDiscription: string;
+// }
 interface Props {
     imageUrl: string;
     imageDiscription: string;
