--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import { Image } from 'astro:assets';
 import KaijiImage from "../../src/images/kaiji01.png";
 import JojoImage from "../../src/images/jojo01.jpeg";
 import NarutoImage from "../../src/images/naruto01.jpg";
@@ -12,6 +13,7 @@ import NarutoImage from "../../src/images/naruto01.jpg";
         <Card imageUrl={JojoImage.src} imageDiscription="ジョジョの画像" />
         <Card imageUrl={NarutoImage.src} imageDiscription="ナルトの画像" />
     </ul>
+    <Image src={KaijiImage} alt="説明文" />
 </Layout>
 
 <style>
