--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
-import { Image } from 'astro:assets';
+import { Image } from "astro:assets";
 import KaijiImage from "../../src/images/kaiji01.png";
 import JojoImage from "../../src/images/jojo01.jpeg";
 import NarutoImage from "../../src/images/naruto01.jpg";
 ---
 
 <Layout title="First Astro">
+    <h3>マンガスタンプ一覧</h3>
     <ul role="list" class="link-card-grid">
         <Card imageUrl={KaijiImage.src} imageDiscription="カイジの画像" />
         <Card imageUrl={JojoImage.src} imageDiscription="ジョジョの画像" />
