--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Card from "../components/Card.astro";
 import { Image } from "astro:assets";
 import KaijiImage from "../../src/images/kaiji01.png";
 import JojoImage from "../../src/images/jojo01.jpeg";
-import NarutoImage from "../../src/images/naruto01.jpg";
+import NarutoImage from "../images/naruto01.jpg";
 ---
 
 <Layout title="First Astro">
