--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+
 import { Image } from "astro:assets";
+
+import NarutoImage2 from "../../public/images/naruto01.jpg";
 import KaijiImage from "../../src/images/kaiji01.png";
 import JojoImage from "../../src/images/jojo01.jpeg";
 import NarutoImage from "../images/naruto01.jpg";
@@ -14,7 +17,7 @@ import NarutoImage from "../images/naruto01.jpg";
         <Card imageUrl={JojoImage.src} imageDiscription="ジョジョの画像" />
         <Card imageUrl={NarutoImage.src} imageDiscription="ナルトの画像" />
     </ul>
-    <Image src={KaijiImage} alt="説明文" />
+    <Image src={NarutoImage2} alt="説明文" />
 </Layout>
 
 <style>
