--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ import NarutoImage from "../images/naruto01.jpg";
         <Card imageUrl={JojoImage.src} imageDiscription="ジョジョの画像" />
         <Card imageUrl={NarutoImage.src} imageDiscription="ナルトの画像" />
     </ul>
+    <img src="images/1up_kinoko.png" alt="" srcset="">
     <Card imageUrl={Kinoko.src} imageDiscription="ナルトの画像" />
     <Image src={NarutoImage2} alt="説明文" />
 </Layout>
