--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ import NarutoImage from "../images/naruto01.jpg";
         <Card imageUrl={NarutoImagePub.src} imageDiscription="ナルトの画像" />
     </ul>
     <img src="images/1up_kinoko.png" alt="publicのpathで通っているキノコ" srcset="">
-    <Card imageUrl={Kinoko.src} imageDiscription="ナルトの画像" />
-    <Image src={NarutoImagePub} alt="説明文" />
+    <Card imageUrl={Kinoko.src} imageDiscription="importからのsrcキノコ画像" />
+    <Image src={Kinoko} alt="Imageタグのキノコ" />
 </Layout>
 
 <style>
