--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,7 @@ import NarutoImage from "../images/naruto01.jpg";
     </ul>
     <img src="images/1up_kinoko.png" alt="publicのpathで通っているキノコ" srcset="">
     <Card imageUrl={Kinoko.src} imageDiscription="importからのsrcキノコ画像" />
+    <Image src="/images/1up_kinoko.png" alt="Imageタグのキノコ" width="100" height="100" />
     <Image src={Kinoko} alt="Imageタグのキノコ" />
 </Layout>
 
